src/proyecto1/XLSaXForm/Analizador/Analyzer.java
/* Generated By:JavaCC: Do not edit this line. Analyzer.java */
  package proyecto1.XLSaXForm.Analizador;
  import proyecto1.XLSaXForm.Nodo;
  import proyecto1.XLSaXForm.Constants;
  public class Analyzer implements AnalyzerConstants {
  public Nodo root;

  final public void INICIO() throws ParseException {
  Nodo padre, hijo;
Token t;
    padre = new Nodo(Constants.INICIO,0,0,"INICIO");
    hijo = INSTRUCCIONES();
                         padre.hijos.add(hijo); root = padre;
    jj_consume_token(0);
  }

  final public Nodo INSTRUCCIONES() throws ParseException {
  Nodo padre,hijo;
    if (jj_2_2(2)) {
    padre = new Nodo("INSTRUCCIONES",0,0,"INSTRUCCIONES");
      label_1:
      while (true) {
        hijo = INICIAR();
                       padre.hijos.add(hijo);
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
      }
    {if (true) return padre;}
    } else if (jj_2_3(2)) {
      jj_consume_token(0);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo INICIAR() throws ParseException {
  Nodo padre,hijo;
    if (jj_2_4(2)) {
      padre = INICIARAGRUPACION();
                          {if (true) return padre;}
    } else if (jj_2_5(2)) {
      padre = INICIARCICLO();
                      {if (true) return padre;}
    } else if (jj_2_6(2)) {
      padre = PREGUNTA();
                  {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo INICIARAGRUPACION() throws ParseException {
 Nodo padre, hijo,hijo2;
    jj_consume_token(INICIAR_AGRUPACION);
                     padre=new Nodo(Constants.INICIARAGRUPACION,0,0,"INICIAR AGRUPACION");
    jj_consume_token(LlaveL);
    hijo = PARAMETROAGRUPACION();
    jj_consume_token(LlaveR);
    hijo2 = FINAGRUPACION();
                      padre.hijos.add(hijo);padre.hijos.add(hijo2); {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo FINAGRUPACION() throws ParseException {
 Nodo padre, hijo;
    if (jj_2_7(2)) {
      padre = INSTRUCCIONES();
      jj_consume_token(FINALIZAR_AGRUPACION);
      jj_consume_token(LlaveL);
      jj_consume_token(LlaveR);
                                                                {if (true) return padre;}
    } else if (jj_2_8(2)) {
      jj_consume_token(FINALIZAR_AGRUPACION);
      jj_consume_token(LlaveL);
      jj_consume_token(LlaveR);
                                          padre=new Nodo(""); {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo PARAMETROAGRUPACION() throws ParseException {
 Nodo padre, hijo;
Token t;
    jj_consume_token(ID_PREGUNTA);
               padre=new Nodo("ID PREGUNTA",0,0,"ID PREGUNTA");
    t = jj_consume_token(VALOR_C);
 String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
padre.hijos.add(hijo); {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo INICIARCICLO() throws ParseException {
 Nodo padre, hijo,hijo2;
    jj_consume_token(INICIAR_CICLO);
                padre=new Nodo(Constants.INICIARCICLO,0,0,"INICIAR CICLO");
    jj_consume_token(LlaveL);
    hijo = PARAMETROAGRUPACION();
    jj_consume_token(LlaveR);
    hijo2 = FINCICLO();
                 padre.hijos.add(hijo);padre.hijos.add(hijo2); {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo FINCICLO() throws ParseException {
 Nodo padre, hijo;
    if (jj_2_9(2)) {
      padre = INSTRUCCIONES();
      jj_consume_token(FINALIZAR_CICLO);
      jj_consume_token(LlaveL);
      jj_consume_token(LlaveR);
                                                           {if (true) return padre;}
    } else if (jj_2_10(2)) {
      jj_consume_token(FINALIZAR_CICLO);
      jj_consume_token(LlaveL);
      jj_consume_token(LlaveR);
                                     padre=new Nodo(""); {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo PREGUNTA() throws ParseException {
Nodo padre,hijo,hijo2;
Token t;
    if (jj_2_11(2)) {
      jj_consume_token(ENTERO);
          padre=new Nodo(Constants.ENTERO,0,0,"ENTERO");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                   padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                     {if (true) return padre;}
    } else if (jj_2_12(2)) {
      jj_consume_token(NOTA);
             padre=new Nodo(Constants.NOTA,0,0,"NOTA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_13(2)) {
      jj_consume_token(FECHA);
              padre=new Nodo(Constants.FECHA,0,0,"FECHA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_14(2)) {
      jj_consume_token(TEXTO);
              padre=new Nodo(Constants.TEXTO,0,0,"TEXTO");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_15(2)) {
      jj_consume_token(RANGO);
              padre=new Nodo(Constants.RANGO,0,0,"RANGO");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_16(2)) {
      jj_consume_token(SELECCIONA_UNO);
      t = jj_consume_token(NOMBRE);
                                  padre=new Nodo(Constants.SELECCIONA_UNO,0,0,"SELECCIONA_UNO");
 padre.hijos.add(new Nodo("nombre",0,0,t.image));
      jj_consume_token(LlaveL);
      hijo2 = MUCHOS_CONTENIDOSP();
                                   padre.hijos.add(hijo2);
      jj_consume_token(LlaveR);
                                                                      {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo MUCHOS_CONTENIDOSP() throws ParseException {
Nodo padre,hijo,hijo2;
    if (jj_2_18(2)) {
   padre = new Nodo("VALORES",0,0,"VALORES");
      label_2:
      while (true) {
        hijo = CONTENIDO_PREGUNTA();
                                 padre.hijos.add(hijo);
        if (jj_2_17(2)) {
          ;
        } else {
          break label_2;
        }
      }
 {if (true) return padre;}
    } else if (jj_2_19(2)) {
      jj_consume_token(0);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo CONTENIDO_PREGUNTA() throws ParseException {
Nodo padre,hijo;
Token t;
    if (jj_2_20(2)) {
      jj_consume_token(ID_PREGUNTA);
                   padre=new Nodo("ID PREGUNTA",0,0,"ID PREGUNTA");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~",""); hijo=new Nodo(Constants.IDPREGUNTA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_21(2)) {
      jj_consume_token(APLICABLE);
                  padre=new Nodo("APLICABLE",0,0,"APLICABLE");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~",""); hijo=new Nodo(Constants.APLICABLE, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_22(2)) {
      jj_consume_token(ETIQUETA);
                    padre=new Nodo("ETIQUETA",0,0,"ETIQUETA");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~",""); hijo=new Nodo(Constants.ETIQUETA, t.beginLine, t.beginColumn, aux.replace("\u005c"","")); padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_23(2)) {
      jj_consume_token(PARAMETRO);
                  padre=new Nodo("PARAMETRO",0,0,"PARAMETRO");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~",""); hijo=new Nodo(Constants.PARAMETRO, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_24(2)) {
      jj_consume_token(CALCULAR);
                 padre=new Nodo("CALCULAR",0,0,"CALCULAR");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.CALCULAR, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_25(2)) {
      jj_consume_token(SUGERENCIA);
                  padre=new Nodo("SUGERENCIA",0,0,"SUGERENCIA");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_26(2)) {
      jj_consume_token(REQUERIDO);
                  padre=new Nodo("REQUERIDO",0,0,"REQUERIDO");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_27(2)) {
      jj_consume_token(PORDEFECTO);
                   padre=new Nodo("PORDEFECTO",0,0,"PORDEFECTO");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_28(2)) {
      jj_consume_token(REQUERIDOMSN);
                     padre=new Nodo("REQUERIDOMSN",0,0,"REQUERIDOMSN");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_29(2)) {
      jj_consume_token(CODIGO_POST);
                    padre=new Nodo("CODIGO_POST",0,0,"CODIGO_POST");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_30(2)) {
      jj_consume_token(CODIGO_PRE);
                   padre=new Nodo("CODIGO_PRE",0,0,"CODIGO_PRE");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_31(2)) {
      jj_consume_token(RESTRINGIR);
                   padre=new Nodo("RESTRINGIR",0,0,"RESTRINGIR");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_32(2)) {
      jj_consume_token(RESTRINGIRMSN);
                      padre=new Nodo("RESTRINGIRMSN",0,0,"RESTRINGIRMSN");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_33(2)) {
      jj_consume_token(LECTURA);
                padre=new Nodo("LECTURA",0,0,"LECTURA");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_34(2)) {
      jj_consume_token(APARIENCIA);
                   padre=new Nodo("APARIENCIA",0,0,"APARIENCIA");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_35(2)) {
      jj_consume_token(REPETICION);
                   padre=new Nodo("REPETICION",0,0,"REPETICION");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_36(2)) {
      jj_consume_token(MULTIMEDIA);
                   padre=new Nodo("MULTIMEDIA",0,0,"MULTIMEDIA");
      t = jj_consume_token(VALOR_C);
      String aux=t.image.replace("#",""); aux=aux.replace("~","");  hijo=new Nodo(Constants.SUGERENCIA, t.beginLine, t.beginColumn, aux.replace("\u005c"",""));
     padre.hijos.add(hijo); {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }
